# Exproblab_Assignment_2

./: README.md
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/scripts/: marker_detector.html  motion_controller.html  ontology_map_builder.html  planner_controller.html  robot_inspection_routine.html
docs/_sources/: index.rst.txt
final_assignment/: CMakeLists.txt  README.md  package.xml
final_assignment/action/: RobotInspectionRoutine.action
final_assignment/config/: motors_config.yaml  sim_config.rviz
final_assignment/launch/: armor_builder.launch  map_builder_empty.launch  ontology_builder_empty.launch  ontology_builder_full.launch  robot_surveillance.launch  simulation_enviornment.launch  simulation_gmapping.launch
final_assignment/msg/: OntologyMap.msg  RoomConnection.msg  RoomDoors.msg
final_assignment/param/: base_local_planner_params.yaml
final_assignment/scripts/: marker_detector.py  motion_controller.py  ontology_map_builder.py  planner_controller.py  robot_inspection_routine.py
final_assignment/src/: aruco_detector.cpp  marker_detector.cpp  marker_server.cpp  publisher.cpp
final_assignment/srv/: RoomInformation.srv
final_assignment/urdf/: materials.xacro  robot.gazebo  robot.xacro  robot_assignment.gazebo  robot_assignment.xacro
